# ames_house_price_prediction

./: .dockerignore  .gitignore  404.html  Makefile  README.md  docker-compose.yml  dockerfile  dockerfile-fastapi  dockerfile-streamlit  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
ames_house_price_prediction/: __init__.py  api.py  app.py  config.py  dataset.py  engine.py  features.py  plots.py
ames_house_price_prediction/data/: __init__.py  dataset.py  utils.py
ames_house_price_prediction/features/: __init__.py  features.py  utils.py
ames_house_price_prediction/modeling/: __init__.py  predict.py  train.py
api/: main.py
app/: main.py
docs/: getting-started.md  index.md  methodology.md  mkdocs.yml
docs/docs/: index.md
getting-started/: index.html
methodology/: index.html
notebooks/: EDA.ipynb
search/: search_index.json
