[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ames_house_price_prediction"
version = "0.0.1"
description = "Predict house prices using  various regression techniques."
authors = [
  { name = "Nikolaos Mavromatis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ames_house_price_prediction"]
force_sort_within_sections = true
